--- a/setting/scss/_footer.scss
+++ b/setting/scss/_footer.scss
@@ -6,81 +6,298 @@
     flex-direction: column;
     align-items: center;
   }
-//     &__reg{
-//       bottom: 1;
-//       position: absolute;
-//       top: 800px;
-//       left: 600px;
-//       right: 0 ;
-//       z-index: 10;
-//       max-width: max-content;
-//       &::after {
-//           transition: 0.3s;
-//           bottom: 0;
-//           top: 0;
-//           left: 0;
-//           right: 0;
-//           content: "";
-//           position: absolute;
-//           z-index: -2;
-//           background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
-//           opacity: 0.7;
-//           filter: blur(5px);
-//           border-radius: 5px;
-//         }
-//         &::before {
-//           width: 100%;
-//           height: 100%;
-//           top: 0;
-//           left: 0;
-//           right: 0;
-//           content: "";
-//           position: absolute;
-//           z-index: -1;
-//           background: white;
-//           opacity: 1;
-//           border-radius: 6px;
-//         }
-//     }
-//   &__sova {
-//     position: relative;
-//     top: 50px;
-//     left: -100px;
-//     &__text {
-//       position: absolute;
-//       display: flex;
-//       flex-direction: column;
-//       top: 40px;
-//       left: 340px;
-//       gap: 15px;
-//     }
-//     &__title {
-//       font-weight: 600;
-//       font-size: 24px;
-//       line-height: 29px;
-//     }
-//     &__p {
-//       font-weight: 500;
-//       font-size: 16px;
-//       line-height: 26px;
-//       max-width: 352px;
-//     }
-//   }
-  &__nav {
+  &__reg {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: space-between;
+    top: 50px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 10;
+    width: 1180px;
+    max-width: 80%;
+    @include _1350px{
+        flex-direction: column;
+        gap: 50px;
+    }
+    @include _768px{
+        max-width: 80%;
+    }
+    &::after {
+      transition: 0.3s;
+      bottom: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      content: "";
+      position: absolute;
+      z-index: -2;
+      background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
+      opacity: 0.7;
+      filter: blur(5px);
+      border-radius: 5px;
+    }
+    &::before {
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      content: "";
+      position: absolute;
+      z-index: -1;
+      background: white;
+      opacity: 1;
+      border-radius: 6px;
+    }
+  }
+  &__sova {
+    position: relative;
+    top: 50px;
+    left: -100px;
+    width: max-content;
+    @include _768px{
+        max-width: max-content;
+        left: 0;
+    }
+    @include _992px{
+        display: none;
+    }
+    @include _1350px{
+        left: -200px;
+    }
+    &__text {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      top: 40px;
+      left: 265px;
+      gap: 15px;
+      background: url(../img/Union.png)no-repeat;
+      background-size: cover;
+      background-position: center center;
+      width: max-content;
+      padding: 25px 41px;
+      
+      @include _768px{
+        top: 0;
+        left: 0;
+        gap: 5px;
+        padding: 30px 5px 0px 275px;
+      }
+    }
+    &__title {
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 29px;
+      @include _768px{
+        font-size: 18px;
+      }
+    }
+    &__p {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 26px;
+      max-width: 352px;
+      @include _768px{
+        font-size: 14px;
+        line-height: 23px;
+      }
+    }
+  }
+  &__links {
+    display: flex;
     background: #00093c;
     max-width: 100%;
+    display: flex;
+    gap: 75px;
+    padding: 70px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    @include _1350px{
+        flex-direction: column-reverse;
+    }
+  }
+  &__navbar {
+    max-width: 100%;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    @include _1350px{
+        text-align: center;
+        
+    }
+    &__links {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+    &__icons {
+      display: flex;
+      gap: 20px;
+    }
+  }
+  &__num {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 26px;
+    color: white;
+    max-width: 100%;
+  }
+  &__adress {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 26px;
+    color: white;
+  }
+  &__mail {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 26px;
+    color: white;
+  }
+  &__nav {
+    display: flex;
+    gap: 60px;
+    flex-wrap: wrap ;
+    &__child {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+    }
+    &__title {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 26px;
+      color: white;
+    }
+  }
+  &__link {
+    color: white;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  &__form {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    @include _768px{
+        width: 100%;
+    }
+    &__section{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        @include _768px{
+            flex-direction: column;
+            width: 100%;
+        }
+    }
+    &__agreed {
+      max-width: 199.45px;
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 14px;
+      display: inline-block;
+      color: #674141;
+      cursor: pointer;
+      @include _768px {
+        max-width: 100% !important;
+        text-align: center;
+        padding: 20px;
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-bottom: 25px;
+        margin-top: 25px;
+      }
+    }
+    &__btn {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 26px;
+      color: #ffffff;
+      border: none;
+      padding: 12px 56px;
+      background: #f7941d;
+      border-radius: 6px;
+      cursor: pointer;
+      @include _768px{
+        width: 100%;
+      }
+    }
+  }
+  &__input {
+    @include _768px{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    &_name {
+      background: rgba(0, 9, 60, 0.1);
+      border-radius: 6px;
+      border: none;
+      width: 444px;
+      padding: 15px;
+      margin-bottom: 20px;
+      display: flex;
+      @include _768px{
+        width: 100%;
+        margin: 0;
+      }
+    }
+    &_tel {
+      width: 210px;
+      background: rgba(0, 9, 60, 0.1);
+      border-radius: 6px;
+      border: none;
+      padding: 15px;
+      @include _768px{
+        width: 100%;
+      }
+    }
+    &_email {
+      width: 210px;
+      background: rgba(0, 9, 60, 0.1);
+      border-radius: 6px;
+      border: none;
+      padding: 15px;
+      margin-left: 20px;
+      @include _768px{
+        margin: 0;
+        width: 100%;
+      }
+    }
   }
 }
 .welcome {
+  display: flex;
   &__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 34px;
-    margin-left: -190px;
+    max-width: 100%;
+    padding-right:200px ;
+    @include _1100px{
+        padding: 0;
+        text-align: center;
+    }
   }
   &__info {
     display: flex;
     padding: 60px 0;
+    @include _1100px{ 
+    flex-direction: column;
+    gap: 30px;
+    text-align: center;
+    
+    }
   }
   &__p {
     max-width: 280px;
@@ -91,3 +308,13 @@
     gap: 30px;
   }
 }
+.copyright {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #bdbdbd;
+}
+.max_width {
+  max-width: 267.09px;
+}
+
