--- a/setting/scss/_info.scss
+++ b/setting/scss/_info.scss
@@ -279,6 +279,7 @@
     display: grid;
     grid-template-columns: minmax(480px, 1fr) repeat(2, minmax(330px, 1fr));
     max-width: 1180.18px;
+    padding-top: 15px;
     @include _1250px {
       display: block;
       max-width: 500px;
@@ -332,7 +333,7 @@
         &_title {
           font-weight: 500;
           font-size: 36px;
-          line-height: 26px;
+          line-height: 30px;
         }
         &_p {
           font-weight: 400;
